--- a/backend/composer.json
+++ b/backend/composer.json
@@ -11,9 +11,8 @@
         "php": "^8.0.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
-        "laravel/sanctum": "^3.0",
-        "laravel/tinker": "^2.7",
-        "laravel/passport": "^11.0"
+        "laravel/sanctum": "^3.3",
+        "laravel/tinker": "^2.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
